--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jpiere.plugin.webui.wysiwygeditor</name>
+	<name>com.kylinsystems.kbs.plugins.jpiere.wysiwygeditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
