--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <artifactId>jpiere.plugin.webui.wysiwygeditor</artifactId>
-  <packaging>eclipse-plugin</packaging>
-  <name>jpiere.plugin.webui.wysiwygeditor</name>
-   <parent>
-	<groupId>org.idempiere</groupId>
-	<artifactId>org.idempiere.parent</artifactId>
-	<version>7.1.0-SNAPSHOT</version>
-	<relativePath>../../../../../../../src/pleiades201909_JPiere71/org.idempiere.parent/pom.xml</relativePath>
-   </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.idempiere</groupId>
+		<artifactId>org.idempiere.parent</artifactId>
+		<version>7.1.0-SNAPSHOT</version>
+		<relativePath>../../kbs-idempiere/org.idempiere.parent/pom.xml</relativePath>
+	</parent>
+
+	<artifactId>com.kylinsystems.kbs.plugins.jpiere.wysiwygeditor</artifactId>
+	<packaging>eclipse-plugin</packaging>
 </project>
